--- a/css/gradients copy.css
+++ b/css/gradients copy.css
@@ -1,37 +1,59 @@
 .fs-pr {
-    /* Fuschia to Purple */
-    background: rgb(217,70,239);
-    background: linear-gradient(90deg, rgba(217,70,239,1) 0%, rgba(147,51,234,1) 100%);
+	/* Fuschia to Purple */
+	background: rgb(217, 70, 239);
+	background: linear-gradient(
+		90deg,
+		rgba(217, 70, 239, 1) 0%,
+		rgba(147, 51, 234, 1) 100%
+	);
 }
 
 .lb-id {
-    /* Light blue to Indigo */
-    background: rgb(56,189,248);
-    background: linear-gradient(90deg, rgba(56,189,248,1) 0%, rgba(99,102,241,1) 100%);
+	/* Light blue to Indigo */
+	background: rgb(56, 189, 248);
+	background: linear-gradient(
+		90deg,
+		rgba(56, 189, 248, 1) 0%,
+		rgba(99, 102, 241, 1) 100%
+	);
 }
 
 .cy-lb {
-    /* Cyan to Light blue */
-    background: rgb(34,211,238);
-    background: linear-gradient(90deg, rgba(34,211,238,1) 0%, rgba(14,165,233,1) 100%);
+	/* Cyan to Light blue */
+	background: rgb(34, 211, 238);
+	background: linear-gradient(
+		90deg,
+		rgba(34, 211, 238, 1) 0%,
+		rgba(14, 165, 233, 1) 100%
+	);
 }
 
 .gr-cy {
-    /* Green to Cyan */
-    background: rgb(74,222,128);
-    background: linear-gradient(90deg, rgba(74,222,128,1) 0%, rgba(6,182,212,1) 100%);
+	/* Green to Cyan */
+	background: rgb(74, 222, 128);
+	background: linear-gradient(
+		90deg,
+		rgba(74, 222, 128, 1) 0%,
+		rgba(6, 182, 212, 1) 100%
+	);
 }
 
 .yl-or {
-    /* Yellow to Orange */
-    background: rgb(250,204,21);
-    background: linear-gradient(90deg, rgba(250,204,21,1) 0%, rgba(249,115,22,1) 100%);
+	/* Yellow to Orange */
+	background: rgb(250, 204, 21);
+	background: linear-gradient(
+		90deg,
+		rgba(250, 204, 21, 1) 0%,
+		rgba(249, 115, 22, 1) 100%
+	);
 }
 
 .pk-rs {
-    /* Pink to Rose */
-    background: rgb(236,72,153);
-    background: linear-gradient(90deg, rgba(236,72,153,1) 0%, rgba(244,63,94,1) 100%);
+	/* Pink to Rose */
+	background: rgb(236, 72, 153);
+	background: linear-gradient(
+		90deg,
+		rgba(236, 72, 153, 1) 0%,
+		rgba(244, 63, 94, 1) 100%
+	);
 }
-
-
