--- a/css/styles.css
+++ b/css/styles.css
@@ -11820,8 +11820,27 @@ section.resume-section {
 	padding-bottom: 5rem;
 	max-width: 75rem;
 }
+section.resume-section p {
+	text-align: justify;
+}
+section.resume-section-full {
+	display: flex;
+	align-items: center;
+	/* padding-left: 1rem; */
+	/* padding-right: 0; */
+	padding-top: 5rem;
+	padding-bottom: 5rem;
+	/* max-width: 100rem; */
+}
 section.resume-section .resume-section-content {
 	width: 100%;
+}
+.cx-offset {
+	max-width: 100%;
+}
+
+.full-offset {
+	padding-left: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -11835,6 +11854,17 @@ section.resume-section .resume-section-content {
 		padding-right: 3rem;
 		padding-top: 5rem;
 		padding-bottom: 5rem;
+	}
+}
+@media (min-width: 992px) {
+	section.resume-section-full {
+		/* padding-left: 3rem; */
+		/* padding-right: 3rem; */
+		padding-top: 5rem;
+		padding-bottom: 5rem;
+	}
+	.full-offset {
+		padding-left: 3rem;
 	}
 }
 
@@ -11952,6 +11982,9 @@ section.resume-section .resume-section-content {
 	background-color: var(--mnbgray);
 }
 
+.text-mn-gray {
+	color: var(--mnbgray);
+}
 .neu {
 	box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
 		-8px -8px 12px 0 rgba(255, 255, 255, 0.3);
@@ -11968,6 +12001,23 @@ section.resume-section .resume-section-content {
 	position: relative;
 	box-shadow: 6px 6px 12px #b6b6b6, -6px -6px 12px #ffffff;
 	transition: all 0.14s ease-in-out;
+}
+
+.parallax {
+	background-image: url("../assets/img/prlx.jpg");
+	min-height: 70vh;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	max-width: 100%;
+	margin: 0;
+}
+
+.prx-text {
+	text-align: justify;
+	color: white;
+	font-family: "SF UI Display Semibold";
 }
 
 .img-gallery img {
@@ -12233,6 +12283,15 @@ section.resume-section .resume-section-content {
 		90deg,
 		rgba(236, 72, 153, 1) 0%,
 		rgba(244, 63, 94, 1) 100%
+	);
+}
+
+.bl-gr {
+	background: rgb(42, 42, 42);
+	background: linear-gradient(
+		90deg,
+		rgba(42, 42, 42, 1) 0%,
+		rgba(89, 89, 89, 1) 100%
 	);
 }
 
