--- a/css/styles.css
+++ b/css/styles.css
@@ -5255,6 +5255,11 @@ fieldset:disabled .btn {
 	background-color: #cff4fc;
 	border-color: #b6effb;
 }
+
+.alert-black {
+	color: white;
+	background-color: #000;
+}
 .alert-info .alert-link {
 	color: #04414d;
 }
@@ -5287,9 +5292,9 @@ fieldset:disabled .btn {
 }
 
 .alert-dark {
-	color: #141619;
-	background-color: #d3d3d4;
-	border-color: #bcbebf;
+	color: #fff;
+	background-color: #000;
+	border-color: #000;
 }
 .alert-dark .alert-link {
 	color: #101214;
@@ -5707,6 +5712,20 @@ fieldset:disabled .btn {
 	height: 1em;
 	padding: 0.25em 0.25em;
 	color: #000;
+	background: transparent
+		url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
+		center/1em auto no-repeat;
+	border: 0;
+	border-radius: 0.25rem;
+	opacity: 0.5;
+}
+
+.btn-close-white {
+	box-sizing: content-box;
+	width: 1em;
+	height: 1em;
+	padding: 0.25em 0.25em;
+	color: white;
 	background: transparent
 		url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
 		center/1em auto no-repeat;
@@ -11843,9 +11862,30 @@ section.resume-section .resume-section-content {
 	padding-left: 2rem;
 }
 
+.toplayer {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	z-index: 9999;
+	border-radius: 0px;
+}
+
+.topmost {
+	z-index: 9999;
+}
+
+@media (min-width: 300px) {
+	.social-icon {
+		margin-top: 10px;
+	}
+}
 @media (min-width: 768px) {
 	section.resume-section {
 		min-height: 100vh;
+	}
+	.social-icon {
+		margin-top: 10px;
 	}
 }
 @media (min-width: 992px) {
@@ -11854,6 +11894,9 @@ section.resume-section .resume-section-content {
 		padding-right: 3rem;
 		padding-top: 5rem;
 		padding-bottom: 5rem;
+	}
+	.social-icon {
+		margin-top: 10px;
 	}
 }
 @media (min-width: 992px) {
