--- a/css/styles.css
+++ b/css/styles.css
@@ -12478,3 +12478,55 @@ section.resume-section .resume-section-content {
 	  border-color: transparent;
 	}
   }
+
+.float-bug{
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: var(--brokenwhite);
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	cursor: pointer;
+	box-shadow: 0px 0px 9px 0px #bdbdbd;	
+  }
+  
+  .contained-icon{
+	position: absolute;
+	top: -15px;
+	display: block;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+	padding: 0;
+	margin: 0;
+	line-height: 55px;
+	font-size: 13px;
+
+  }
+  
+  .float-bug:hover {
+	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+	transform: translate3d(0, 0, 0);
+	backface-visibility: hidden;
+	perspective: 1000px;
+  }
+  
+  @keyframes shake {
+	10%, 90% {
+	  transform: translate3d(-1px, 0, 0);
+	}
+	
+	20%, 80% {
+	  transform: translate3d(2px, 0, 0);
+	}
+  
+	30%, 50%, 70% {
+	  transform: translate3d(-4px, 0, 0);
+	}
+  
+	40%, 60% {
+	  transform: translate3d(4px, 0, 0);
+	}
+  }
